<pre><code> => <pre>, fixing CSS so that pre blocks are word wrapped again.

--- a/app/templates/default/stylesheets/ie7_and_below.less
+++ b/app/templates/default/stylesheets/ie7_and_below.less
@@ -1,4 +1,4 @@
-.content_age {
+.pre_block, pre {
   white-space: pre;
   word-wrap: break-word;
 }
