--- a/app/templates/default/stylesheets/screen.less
+++ b/app/templates/default/stylesheets/screen.less
@@ -15,6 +15,10 @@
   font-size:15px;
 }
 
+.monospace_font {
+  font-family:monospace;
+}
+
 body {
   margin:0;
   font-size:15px;
@@ -235,6 +239,11 @@ pre {
   ins, del {
     display:inline;
   }
+}
+
+pre {
+  white-space:pre-wrap;
+  .monospace_font;
 }
 
 #page_form_tabs {
